<resources>
    <string name="app_name">Ambient Gallery</string>
    <string name="empty" translatable="false"></string>
    <string name="day_sun">Sun</string>
    <string name="day_mon">Mon</string>
    <string name="day_tue">Tue</string>
    <string name="day_wed">Wed</string>
    <string name="day_thu">Thu</string>
    <string name="day_fri">Fri</string>
    <string name="day_sat">Sat</string>
    <string name="button_back">Back</string>
    <string name="button_settings">Settings</string>
    <string name="button_ambient_mode">Turn on ambient mode</string>
    <string name="time_am" translatable="false">AM</string>
    <string name="time_pm" translatable="false">PM</string>
    <string name="hint_storage_permission_explanation_1">"We need storage permission to read pictures in "</string>
    <string name="hint_storage_permission_explanation_2">.</string>
    <string name="hint_directory_name_occupied_1">Directory path</string>
    <string name="hint_directory_name_occupied_2">is occupied by a file with the same name. Please check manually in file manager.</string>
    <string name="hint_failed_to_create_directory_1">"Cannot create directory "</string>
    <string name="hint_failed_to_create_directory_2">.</string>
    <string name="hint_cannot_clear_nomedia_1">There is .nomeida file in</string>
    <string name="hint_cannot_clear_nomedia_2">. Please backup files and delete the folder.</string>
    <string name="hint_no_available_files_1">"No available photos found in "</string>
    <string name="hint_no_available_files_2">.</string>
    <string name="settings_sensitivity">Operating sensitivity</string>
    <string name="settings_sensitivity_desc">Sensitivity of pull down refreshing etc.</string>
    <string name="settings_performance">Performance and stability</string>
    <string name="settings_performance_desc">Image quality</string>
    <string name="settings_timeout">Timeout</string>
    <string name="settings_timeout_desc">When to go ambient, switch image, etc.</string>
    <string name="settings_behavior">App behavior</string>
    <string name="settings_behavior_desc">Actions when environment changed</string>
    <string name="settings_brightness">Brightness</string>
    <string name="settings_brightness_desc">Brightness of main interface components</string>
    <string name="settings_brightness_tab_normal">Normal</string>
    <string name="settings_brightness_tab_ambient">Ambient</string>
    <string name="settings_brightness_text_brightness">Text brightness</string>
    <string name="settings_brightness_bg_brightness">Background brightness</string>
    <string name="settings_brightness_min_desc">Min brightness of ambient mode</string>
    <string name="settings_brightness_max_desc">Max brightness of normal mode</string>
    <string name="settings_performance_image_quality">Image quality</string>
    <string name="settings_performance_quality_level">Quality level</string>
    <string name="settings_performance_image_quality_level_hint">"Adjust the slider and check the result here. \nStability may differ between devices. "</string>
    <string name="settings_performance_display_resolution">Display resolution</string>
    <string name="settings_performance_image_resolution">Image resolution</string>
    <string name="settings_timeout_picker_hour">h</string>
    <string name="settings_timeout_picker_minute">m</string>
    <string name="settings_timeout_picker_second">s</string>
    <string name="settings_timeout_tab_hide_buttons">Hide buttons</string>
    <string name="settings_timeout_tab_go_ambient">Go ambient</string>
    <string name="settings_timeout_tab_switch_background">Switch background</string>
    <string name="settings_performance_image_quality_level_low">More stability</string>
    <string name="settings_performance_image_quality_level_high">More quality</string>
    <string name="settings_behavior_no_action">No action</string>
    <string name="settings_behavior_stop_keeping_on">Stop keeping on</string>
    <string name="settings_behavior_low_light_mode">Low light mode</string>
    <string name="settings_behavior_condition_low_light">When in low light:</string>
</resources>