<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_performance_main_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/settings_performance_main_tab_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        app:tabIndicatorColor="@color/grayscale_15"
        app:tabSelectedTextColor="@color/grayscale_15">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/settings_performance_main_tab_image_quality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_performance_image_quality" />

    </com.google.android.material.tabs.TabLayout>

    <ScrollView
        android:id="@+id/settings_performance_main_scroll_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/settings_performance_main_scroll_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/settings_performance_main_image_quality_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="12dp"
                android:paddingBottom="12dp">

                <TextView
                    android:id="@+id/settings_performance_main_image_quality_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginLeft="12dp"
                    android:text="@string/settings_performance_quality_level"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@+id/settings_performance_main_image_quality_seekbar"
                    app:layout_constraintEnd_toStartOf="@+id/settings_performance_main_image_quality_value"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/settings_performance_main_image_quality_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:layout_marginRight="12dp"
                    android:text="0"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@+id/settings_performance_main_image_quality_seekbar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/settings_performance_main_image_quality_title"
                    app:layout_constraintTop_toTopOf="parent" />

                <SeekBar
                    android:id="@+id/settings_performance_main_image_quality_seekbar"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:max="3"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/settings_performance_main_image_quality_title" />

                <TextView
                    android:id="@+id/settings_performance_main_image_quality_low"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginLeft="12dp"
                    android:text="@string/settings_performance_image_quality_level_low"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/settings_performance_main_image_quality_seekbar" />

                <TextView
                    android:id="@+id/settings_performance_main_image_quality_high"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:layout_marginRight="12dp"
                    android:text="@string/settings_performance_image_quality_level_high"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/settings_performance_main_image_quality_seekbar" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>