<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_brightness_main_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/settings_brightness_main_tab_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tabBackground="@color/transparent"
        app:tabIndicatorColor="@color/highlight_color"
        app:tabIndicatorGravity="bottom"
        app:tabSelectedTextColor="@color/main_color"
        app:tabTextColor="@color/sub_color">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/settings_brightness_main_tab_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_brightness_tab_normal" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/settings_brightness_main_tab_ambient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_brightness_tab_ambient" />

    </com.google.android.material.tabs.TabLayout>

    <ScrollView
        android:id="@+id/settings_brightness_main_scroll_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/settings_brightness_main_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/settings_brightness_main_text_brightness_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tabLayout">

                <TextView
                    android:id="@+id/settings_brightness_main_text_brightness_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginLeft="12dp"
                    android:text="@string/settings_brightness_text_brightness"
                    android:textColor="@color/main_color"
                    android:textSize="@dimen/text_size_big"
                    app:layout_constraintBottom_toTopOf="@+id/settings_brightness_main_text_brightness_seekbar"
                    app:layout_constraintEnd_toStartOf="@+id/settings_brightness_main_text_brightness_value"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/settings_brightness_main_text_brightness_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:layout_marginRight="12dp"
                    android:text="0 %"
                    android:textColor="@color/main_color"
                    android:textSize="@dimen/text_size_big"
                    app:layout_constraintBottom_toTopOf="@+id/settings_brightness_main_text_brightness_seekbar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/settings_brightness_main_text_brightness_title"
                    app:layout_constraintTop_toTopOf="parent" />

                <SeekBar
                    android:id="@+id/settings_brightness_main_text_brightness_seekbar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/settings_brightness_main_text_brightness_title" />

                <TextView
                    android:id="@+id/settings_brightness_main_text_brightness_desc_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginLeft="12dp"
                    android:textColor="@color/sub_color"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/settings_brightness_main_text_brightness_seekbar" />

                <TextView
                    android:id="@+id/settings_brightness_main_text_brightness_desc_max"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:layout_marginRight="12dp"
                    android:textColor="@color/sub_color"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/settings_brightness_main_text_brightness_seekbar" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/settings_brightness_main_bg_brightness_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tabLayout">

                <TextView
                    android:id="@+id/settings_brightness_main_bg_brightness_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginLeft="12dp"
                    android:text="@string/settings_brightness_bg_brightness"
                    android:textColor="@color/main_color"
                    android:textSize="@dimen/text_size_big"
                    app:layout_constraintBottom_toTopOf="@+id/settings_brightness_main_bg_brightness_seekbar"
                    app:layout_constraintEnd_toStartOf="@+id/settings_brightness_main_bg_brightness_value"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/settings_brightness_main_bg_brightness_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:layout_marginRight="12dp"
                    android:text="0 %"
                    android:textColor="@color/main_color"
                    android:textSize="@dimen/text_size_big"
                    app:layout_constraintBottom_toTopOf="@+id/settings_brightness_main_bg_brightness_seekbar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/settings_brightness_main_bg_brightness_title"
                    app:layout_constraintTop_toTopOf="parent" />

                <SeekBar
                    android:id="@+id/settings_brightness_main_bg_brightness_seekbar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/settings_brightness_main_bg_brightness_title" />

                <TextView
                    android:id="@+id/settings_brightness_main_bg_brightness_desc_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginLeft="12dp"
                    android:textColor="@color/sub_color"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/settings_brightness_main_bg_brightness_seekbar" />

                <TextView
                    android:id="@+id/settings_brightness_main_bg_brightness_desc_max"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:layout_marginRight="12dp"
                    android:textColor="@color/sub_color"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/settings_brightness_main_bg_brightness_seekbar" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>